add option/setting "AurRpcUrl"
Allows to set an alternative URL for the /rpc endpoint.

Signed-off-by: moson-mo <mo-son@mailbox.org>

--- a/man/paru.8
+++ b/man/paru.8
@@ -253,6 +253,10 @@ Note that dependency resolution will still include repository packages.
 Set an alternative AUR URL.
 
 .TP
+.B \-\-aurrpcurl
+Set an alternative URL for the AUR /rpc endpoint.
+
+.TP
 .B \-\-clonedir <dir>
 Directory used to download and run PKGBUILDs.
 
