--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -161,6 +161,10 @@ it is up to the user what upgrades they skip.
 Set an alternative AUR URL.
 
 .TP
+.B AurRpcUrl = URL
+Set an alternative URL for the AUR /rpc endpoint.
+
+.TP
 .B CloneDir = /path/to/dir
 Directory used to download and run PKGBUILDs.
 
