Update paru.conf man page

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -25,8 +25,9 @@ your user's config and then defining options.
 Options belonging to the [options] section.
 
 .TP
-.B BottomUp
-Print search results from bottom to top. AUR results will be printed first.
+.B BottomUp [= auto]
+Print search results from bottom to top. AUR results will be printed first. If
+set to auto, only prints results from bottom to top if standard output is a tty.
 
 .TP
 .B AurOnly
