--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -27,7 +27,8 @@ Options belonging to the [options] section.
 .TP
 .B BottomUp [= auto]
 Print search results from bottom to top. AUR results will be printed first. If
-set to auto, only prints results from bottom to top if standard output is a tty.
+set to auto, prints results from bottom to top if standard output is a tty,
+otherwise top to bottom.
 
 .TP
 .B AurOnly
