Use -o to ignore optional deps with --clean
Fixes #812

--- a/man/paru.8
+++ b/man/paru.8
@@ -108,7 +108,8 @@ date. Updates will then be detected on the next commit.
 Remove unneeded dependencies.
 
 Make and check dependencies are considered for
-foreign packages. Pass this twice to ignore these.
+foreign packages. Pass this twice to ignore these. Pass \-o to
+ignore optional dependencies.
 
 .SH SHOW OPTIONS (APPLY TO \-P AND \-\-SHOW)
 .TP
